feat: integrate Groq AI complaint analysis with frontend auto-classification workflow