@@ -4,12 +4,12 @@ import com.cms.model.User;
 import com.cms.repository.UserRepository;
 
 import org.springframework.beans.factory.annotation.Autowired;
-
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService
@@ -23,13 +23,13 @@ public class CustomUserDetailsService
             String email
     ) throws UsernameNotFoundException {
 
-        User user =
-                userRepository.findByEmail(email)
-                        .orElseThrow(() ->
-                                new UsernameNotFoundException(
-                                        "User not found"
-                                )
-                        );
+        User user = userRepository
+                .findByEmail(email)
+                .orElseThrow(() ->
+                        new UsernameNotFoundException(
+                                "User not found"
+                        )
+                );
 
         return new org.springframework.security.core.userdetails.User(
 
@@ -37,7 +37,13 @@ public class CustomUserDetailsService
 
                 user.getPassword(),
 
-                Collections.emptyList()
+                List.of(
+
+                        new SimpleGrantedAuthority(
+
+                                "ROLE_" + user.getRole().name()
+                        )
+                )
         );
     }
 }
